--- a/Android~/UnityMobileInput/gradle/wrapper/gradle-wrapper.properties
+++ b/Android~/UnityMobileInput/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Wed Oct 14 11:28:34 MSK 2020
+#Thu May 06 12:03:46 EDT 2021
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-6.5-bin.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-6.5-all.zip
